--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "breaks-into"
+name = "gpt"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,7 @@ indoc = "2.0.5"
 reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
+
+[[example]]
+name = "basic"
+path = "examples/basic.rs"
