--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+derive_more = "0.99.18"
 indoc = "2.0.5"
 reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
+tokio = { version = "1.39.1", features = ["full"] }
 
 [[example]]
 name = "basic"
